# multiagents-tech-support-system

./: .env.example  .gitignore  README.md  app.py  docker-compose.yaml  pyproject.toml  st_app.py
data/json/: Vertiv.json
src/support_system/: api.py  config.py  graph.py  main.py  state.py
src/support_system/agents/: coordinator.py  search_internal.py  search_web.py  synthesizer.py
tools/: chunking.py  index_data.py  setup_db.py
